# personal_assistant

./: .gitignore  README.md  pyproject.toml
config/: config.example.yaml  personality.example.md
scripts/: install-models.sh  install.sh  register-hotkey.sh
src/personal_assistant/: __main__.py  _cuda.py  claude_session.py  config.py  daemon.py  hotkey.py  indicator.py  memory.py  menu.py  personality.py  recorder.py  sentence_buffer.py  stt.py  tts.py  tts_elevenlabs.py  tts_openai.py  tts_piper.py  tts_xtts.py  voices.py
systemd/: personal-assistant.service
