[project]
name = "personal-assistant"
version = "0.1.0"
description = "Asistente personal por voz en Linux: Whisper + Claude Code + Piper"
requires-python = ">=3.12,<3.14"
dependencies = [
    "evdev>=1.7.1",
    "sounddevice>=0.4.7",
    "numpy>=1.26",
    "webrtcvad-wheels>=2.0.14",
    "faster-whisper>=1.0.3",
    "piper-tts>=1.2.0",
    "pyyaml>=6.0.2",
    "pydantic>=2.9",
    "structlog>=24.4",
    "PySide6>=6.7",
]

[project.scripts]
assistant = "personal_assistant.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/personal_assistant"]
